// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleHeadline renders correctly with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inline-block;
  margin: 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 700;
    -webkit-letter-spacing: -0.5px;
    -moz-letter-spacing: -0.5px;
    -ms-letter-spacing: -0.5px;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

<h1
    class="emotion-0"
  >
    test
  </h1>
</DocumentFragment>
`;

exports[`ArticleHeadline renders correctly with default props 2`] = `
<DocumentFragment>
  .emotion-1 {
  display: inline-block;
  margin: 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

@media screen and (min-width:960px) {
  .emotion-1 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 700;
    -webkit-letter-spacing: -0.5px;
    -moz-letter-spacing: -0.5px;
    -ms-letter-spacing: -0.5px;
    letter-spacing: -0.5px;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

.emotion-2 {
  display: block;
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a0a0a;
  display: inline-block;
  font-family: "Noto Sans",sans-serif;
  font-size: 36px;
  line-height: 1.1111111111111112;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a68c1;
  margin-right: 12px;
  text-transform: uppercase;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 700;
    -webkit-letter-spacing: -0.5px;
    -moz-letter-spacing: -0.5px;
    -ms-letter-spacing: -0.5px;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.2055555555555556em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.2680555555555556em;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 36px;
    line-height: 1.1111111111111112;
    font-weight: 700;
    -webkit-letter-spacing: -0.5px;
    -moz-letter-spacing: -0.5px;
    -ms-letter-spacing: -0.5px;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 700;
    -webkit-letter-spacing: -0.5px;
    -moz-letter-spacing: -0.5px;
    -ms-letter-spacing: -0.5px;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 44px;
    line-height: 1.0909090909090908;
    font-weight: 700;
    -webkit-letter-spacing: -0.5px;
    -moz-letter-spacing: -0.5px;
    -ms-letter-spacing: -0.5px;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.19545454545454544em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.25795454545454544em;
  }
}

@media screen and (min-width:480px) {
  .emotion-0 {
    margin-right: 12px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

<section
    class="emotion-2"
  >
    <h5
      class="emotion-0"
    >
      this is kicker 
    </h5>
    <h4
      class="emotion-1"
    >
      test
    </h4>
  </section>
</DocumentFragment>
`;

exports[`ArticleHeadline renders correctly with overriden props 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: block;
}

.emotion-0 {
  display: inline-block;
  margin: 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #2F75D7;
  display: inline-block;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #0a68c1;
  margin-right: 12px;
  text-transform: uppercase;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

@media screen and (min-width:960px) {
  .emotion-0 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 700;
    -webkit-letter-spacing: -0.5px;
    -moz-letter-spacing: -0.5px;
    -ms-letter-spacing: -0.5px;
    letter-spacing: -0.5px;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

.emotion-0 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-0:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-0:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-0:visited:not(:disabled) {
  color: #903D91;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

.emotion-0::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-0::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

@media screen and (min-width:480px) {
  .emotion-0 {
    margin-right: 12px;
  }
}

@media screen and (min-width:960px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    margin-right: 16px;
  }
}

.emotion-1 {
  display: inline-block;
  margin: 0;
  font-family: "Noto Sans",sans-serif;
  font-size: 32px;
  line-height: 1.125;
  font-weight: 700;
  -webkit-letter-spacing: -0.5px;
  -moz-letter-spacing: -0.5px;
  -ms-letter-spacing: -0.5px;
  letter-spacing: -0.5px;
  color: #2F75D7;
}

.emotion-1::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.21250000000000002em;
}

.emotion-1::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.275em;
}

@media screen and (min-width:960px) {
  .emotion-1 {
    font-family: "Noto Sans",sans-serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 700;
    -webkit-letter-spacing: -0.5px;
    -moz-letter-spacing: -0.5px;
    -ms-letter-spacing: -0.5px;
    letter-spacing: -0.5px;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

.emotion-1 svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-1:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-1:hover:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-1:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-1:active:not(:disabled) svg {
  fill: #2F75D7;
  color: #2F75D7;
}

.emotion-1:visited:not(:disabled) {
  color: #903D91;
}

.emotion-1:visited:not(:disabled) svg {
  fill: #903D91;
  color: #903D91;
}

<section
    class="emotion-2"
  >
    <h5
      class="emotion-0"
    >
      this is kicker 
    </h5>
    <h4
      class="emotion-1"
    >
      test
    </h4>
  </section>
</DocumentFragment>
`;
